# wildrepo

./: .gitignore  Makefile  README.txt  pyproject.toml  wildclone.sh
extras/: sync.sh
wildrepo/: cli.py  github.py
